--- a/index.html
+++ b/index.html
@@ -108,8 +108,13 @@ $( "#target" ).click(function() {
             <div class="row">
                 <div class="col-lg-12">
                     <img class="img-responsive imgsize" src="img/logo.jpeg" alt="" >
-                    <div class="intro-text">            
-                      <a href="#invite" class="glyphicon glyphicon-chevron-down glyphcolor" ></a>
+                    <div class="intro-text">
+                        <ul class="list-inline">
+                            <li>
+                                <a href="https://youtu.be/bitr7tQ5CaM"target="_blank"><i class="fa fa-youtube-play fa-fw fa-2x foo"></i> <span class="mahal2">Watch invite on YouTube</span></a>
+                            </li>
+                        </ul>    
+                      <a href="#invite" class="glyphicon glyphicon-chevron-down glyphcolor" ><span class="mahal2">Swipe down for the surprise</span></a>
                    </div>
                 </div>
             </div>
@@ -227,7 +232,7 @@ $( "#target" ).click(function() {
                                 <i class="fa fa-heart fa-stack-1x text-primary" style="padding-top:4px;color:rgba(63, 63, 63, 0.85)"></i>
                             </span>
                                 <h4>
-                                    <strong id="loves">loves so far</strong>
+                                    <strong id="loves">3 loves so far</strong>
                                 </h4>
                               
                                 
