--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ $( "#target" ).click(function() {
                     <a id="target"  class="btn btn-lg btn-default " ><span class="glyphicon glyphicon-heart-empty"></span>&nbspclick to Wish the Couple</a>
                     <div class="row">
                         <br>
-                        <iframe class ="col-md-offset-2"src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fvicksks.github.io&width=450&layout=standard&action=like&size=small&show_faces=true&share=true&height=80&appId" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+                        <iframe class ="col-md-offset-2"src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Frajaprakash.me&width=450&layout=standard&action=like&size=small&show_faces=true&share=true&height=80&appId" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
                     </div>
                     <!-- /.row (nested) -->
                 </div>
